--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <pageHelper.starter.version>1.2.5</pageHelper.starter.version>
         <lombok.version>1.18.12</lombok.version>
         <fastjson.version>1.2.70</fastjson.version>
+        <redis.version>2.3.4.RELEASE</redis.version>
     </properties>
 
     <dependencies>
@@ -80,6 +81,19 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <!-- jtw依赖 -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.3</version>
+        </dependency>
+        <!-- redis依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${redis.version}</version>
+        </dependency>
+
 
 
         <dependency>
@@ -94,6 +108,21 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>UTF8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
